--- a/src/index.css
+++ b/src/index.css
@@ -74,4 +74,12 @@
   .nav-link-active {
     @apply text-brown-900 after:w-full;
   }
+
+  .dashnav-link {
+    @apply relative font-medium text-gray-300 hover:text-gray-100 transition-colors after:absolute after:left-0 after:bottom-0 after:h-0.5 after:w-0 after:bg-gray-300 after:transition-all hover:after:w-full;
+  }
+
+  .dashnav-link-active {
+    @apply text-gray-100 after:w-full;
+  }
 }
